autotests/syntax-tests/tests/negative/negative65.sref
Name { Name $FORWARD Name Name , : = : = ; = ; } ; 